--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,96 @@ h3 {
 img {
     max-width: 100%;
     display: block;
+    height: auto;
 }
 /** Utilidades **/
 .tex-center {
+    text-align: center;
+}
+
+/** Degradados **/
+
+.degradado-verde {
+    color:transparent;
+    background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100% );
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+/* Header */
+.header {
+    background-color: var(--negro);
+    padding: calc( var(--separacion) * 3 ) 0;
+    color: var(--blanco);
+}
+
+@media (min-width: 768px) { 
+    .contenido-header {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.texto-header {
+    text-align: center;
+    padding-top: var(--separacion);
+}
+
+@media (min-width: 768px) { 
+    .texto-header {
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0;
+    }
+}
+.texto-header p {
+    margin: 0;
+}
+.tagline-producto {
+    font-size: 3rem;
+    font-weight: 900;
+}
+.nombre-producto {
+    font-size: 6rem;
+    margin: 0;
+}
+@media (min-width: 768px) { 
+    .nombre-producto {
+        font-size: 10rem;        
+        line-height: 1;
+    }
+}
+
+.precio-producto span {
+    font-size: 6rem;
+    font-weight: 900;
+}
+
+/** Iconos **/
+.iconos {
+    padding: var(--separacion) 0;
+}
+@media (min-width: 768px) { 
+    .iconos {
+        display: flex;
+        gap: 2rem;
+    }
+}
+
+.icono {
+    text-align: center;
+}
+.icono img {
+    width: 5rem;
+    margin: 0 auto;
+}
+.icono h3 {
+    color: var(--primario);
+    text-transform: uppercase;
+    margin-top: calc( var(--separacion) / 2 ) ;
+}
+.icono p {
     text-align: center;
 }
