--- a/css/styles.css
+++ b/css/styles.css
@@ -9,20 +9,25 @@
     --fuentePrincipal: 'Roboto', sans-serif;
     --fuenteSecundaria: 'Lato', sans-serif;
 }
+
 html {
     box-sizing: border-box;
     font-size: 62.5%;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 
 }
+
 body {
     font-family: var(--fuenteprincipal);
     font-size: 1.6rem;
     line-height: 1.5;
 }
+
 /** Globales **/
 .contenedor {
     max-width: 120rem;
@@ -30,11 +35,27 @@ body {
     margin: 0 auto;
 }
 
-h1, h2, h3 {
+
+
+h1,
+h2,
+h3 {
     font-weight: 900;
     font-family: var(--fuenteSecundaria);
-    margin: calc( var(--separacion) / 2 ) 0;
+    margin: calc(var(--separacion) / 2) 0;
 }
+
+h1,
+h2,
+p {
+    text-align: left;
+    padding: 0.5rem;
+}
+
+.texto h3 {
+    text-align: center;
+}
+
 
 h1 {
     font-size: 4.4rem;
@@ -48,11 +69,13 @@ h3 {
     font-size: 2.8rem;
 }
 
+
 img {
     max-width: 100%;
     display: block;
     height: auto;
 }
+
 /** Utilidades **/
 .tex-center {
     text-align: center;
@@ -60,19 +83,20 @@ img {
 
 /** Degradados **/
 .degradado-verde {
-    color:transparent;
-    background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100% );
+    color: transparent;
+    background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100%);
     -webkit-background-clip: text;
     background-clip: text;
 }
+
 /* Header */
 .header {
     background-color: var(--negro);
-    padding: calc( var(--separacion) * 3 ) 0;
+    padding: calc(var(--separacion) * 3) 0;
     color: var(--blanco);
 }
 
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
     .contenido-header {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -84,7 +108,7 @@ img {
     padding-top: var(--separacion);
 }
 
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
     .texto-header {
         text-align: left;
         display: flex;
@@ -93,20 +117,24 @@ img {
         padding: 0;
     }
 }
+
 .texto-header p {
     margin: 0;
 }
+
 .tagline-producto {
     font-size: 3rem;
     font-weight: 900;
 }
+
 .nombre-producto {
     font-size: 6rem;
     margin: 0;
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .nombre-producto {
-        font-size: 10rem;        
+        font-size: 10rem;
         line-height: 1;
     }
 }
@@ -120,7 +148,8 @@ img {
 .iconos {
     padding: var(--separacion) 0;
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .iconos {
         display: flex;
         gap: 2rem;
@@ -129,79 +158,89 @@ img {
 
 .icono {
     text-align: center;
-    margin-bottom: calc( var(--separacion) / 2);
+    margin-bottom: calc(var(--separacion) / 2);
 }
+
 .icono:last-of-type {
     margin: 0;
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .icono {
         margin: 0;
     }
 }
+
 .icono img {
     width: 5rem;
     margin: 0 auto;
 }
+
 .icono h3 {
     color: var(--primario);
     text-transform: uppercase;
-    margin-top: calc( var(--separacion) / 2 ) ;
+    margin-top: calc(var(--separacion) / 2);
 }
 
 /** Sobre Tech PRO**/
-.sobre-tech {  
+.sobre-tech {
     background-position: right;
     background-repeat: repeat, no-repeat;
     background-size: 100%, 110rem;
 }
+
 .notavif.notwebp .sobre-tech {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.jpg);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
 }
 
 .webp .sobre-tech {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.webp);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.webp);
 }
 
 .avif .sobre-tech {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.avif);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.avif);
 }
 
-@media (min-width: 768px) { 
-    .sobre-tech {   
+@media (min-width: 768px) {
+    .sobre-tech {
         background-repeat: repeat, no-repeat;
     }
+
     .notavif.notwebp .sobre-tech {
-        background-image: linear-gradient( to left, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.jpg);
+        background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
     }
+
     .webp .sobre-tech {
-        background-image: linear-gradient( to left, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.webp);
+        background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.webp);
     }
 
     .avif .sobre-tech {
-        background-image: linear-gradient( to left, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.avif);
+        background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.avif);
     }
-    
-    @media (min-width: 1600px) { 
+
+    @media (min-width: 1600px) {
         .sobre-tech {
             background-size: 100%, 210rem;
         }
     }
 }
+
 .sobre-tech-grid {
     display: grid;
     grid-template-rows: repeat(2, 40rem);
     row-gap: var(--separacion);
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .sobre-tech-grid {
         grid-template-rows: unset;
         row-gap: unset;
         grid-template-columns: repeat(2, 1fr);
-        /* column-gap: 4rem; */
-        padding: calc( var(--separacion) * 2) 0;
+        column-gap: 4rem;
+        padding: calc(var(--separacion) * 2) 0;
     }
 }
+
 .texto-sobre-tech {
     grid-row: 2 / 3;
     color: var(--blanco);
@@ -210,14 +249,17 @@ img {
     justify-content: space-around;
     padding-bottom: var(--separacion);
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .texto-sobre-tech {
         padding-bottom: 0;
     }
 }
+
 .texto-sobre-tech h2 {
     font-size: 4rem;
 }
+
 .texto-sobre-tech p {
     font-size: 2rem;
     line-height: 2;
@@ -232,7 +274,7 @@ img {
 .header-modelos {
     font-size: 6rem;
     margin-bottom: var(--separacion);
-    
+
 }
 
 
@@ -240,9 +282,10 @@ img {
     display: flex;
     flex-direction: column-reverse;
 }
-@media (min-width: 992px) { 
+
+@media (min-width: 992px) {
     .listado-modelos {
-        display:grid;
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 20rem);
         gap: 4rem;
@@ -251,7 +294,7 @@ img {
 
 .modelo {
     background-color: var(--grisClaro);
-    margin-bottom: 2rem; 
+    margin-bottom: 2rem;
     padding-left: 4rem;
     color: var(--primario);
     border-radius: 2rem;
@@ -265,23 +308,28 @@ img {
     transition-property: transform background-size;
     transition-duration: .3s;
 }
+
 .modelo:hover {
     transform: scale(1.1);
     background-size: 30rem;
 }
-@media (min-width: 992px) { 
+
+@media (min-width: 992px) {
     .modelo {
         margin-bottom: 0;
     }
 }
+
 .modelo h3 {
     font-size: 2.4rem;
 }
+
 .modelo .precio {
     font-size: 4rem;
     font-weight: 900;
     line-height: 0;
 }
+
 .modelo:first-of-type {
     margin-bottom: 0;
 }
@@ -290,8 +338,9 @@ img {
 
 
 .modelo-x {
-    background-image: url(../img/modelo-x.svg);   
+    background-image: url(../img/modelo-x.svg);
 }
+
 .modelo-y {
     background-image: url(../img/modelo-y.svg);
 }
@@ -302,16 +351,19 @@ img {
     background-color: var(--primario);
     color: var(--blanco);
 }
-@media (min-width: 992px) { 
+
+@media (min-width: 992px) {
     .modelo-z {
         grid-column: 2 / 3;
         grid-row: 1 / 3;
         background-size: 25rem;
     }
+
     .modelo-z h3 {
         font-size: 4rem;
     }
 }
+
 .modelo-z .precio {
     font-size: 6rem;
 }
@@ -322,35 +374,40 @@ img {
     background-repeat: no-repeat;
     background-size: 100%, 70rem;
 }
+
 .notavif.notwebp .newsletter {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
 }
 
 .webp .newsletter {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.webp);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.webp);
 }
 
 .avif .newsletter {
-    background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.avif);
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.avif);
 }
-@media (min-width: 768px) { 
-    .newsletter {   
+
+@media (min-width: 768px) {
+    .newsletter {
         background-position: center, -21rem 0rem;
         background-size: 100%, 100rem;
-        padding: 10rem 0; 
+        padding: 10rem 0;
     }
+
     .notavif.notwebp .newsletter {
-        background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
     }
+
     .webp .newsletter {
-        background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.webp);
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.webp);
     }
+
     .avif .newsletter {
-        background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.avif);
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.avif);
     }
 }
 
-@media (min-width: 2200px) { 
+@media (min-width: 2200px) {
     .newsletter {
         background-size: 100%, 200rem;
         background-position: center, 0% -30rem;
@@ -362,7 +419,8 @@ img {
     grid-template-rows: repeat(2, 30rem);
     gap: var(--separacion);
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .contenido-newsletter {
         grid-template-rows: unset;
         grid-template-columns: repeat(2, 1fr);
@@ -372,12 +430,14 @@ img {
 .texto-newsletter {
     grid-row: 2 / 3;
 }
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
     .texto-newsletter {
         grid-row: unset;
         grid-column: 2 / 3;
     }
 }
+
 .formulario input[type="text"] {
     width: 100%;
     padding: 1rem;
@@ -399,7 +459,13 @@ img {
     text-align: center;
     font-family: var(--fuenteSecundaria);
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 1.6rem;
     color: var(--primario);
     padding: 2rem, 0;
+}
+
+@media (min-width: 320px) {
+    .newsletter {
+        margin-bottom: 12rem;
+    }
 }
