--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 /** Globales **/
 .contenedor {
     max-width: 120rem;
-    width: 90%;
+    /* width: 90%; */
     margin: 0 auto;
 }
 
@@ -49,7 +49,7 @@ h1,
 h2,
 p {
     text-align: left;
-    padding: 0.5rem;
+    padding: 0.2rem;
 }
 
 .texto h3 {
@@ -186,7 +186,7 @@ img {
 .sobre-tech {
     background-position: right;
     background-repeat: repeat, no-repeat;
-    background-size: 100%, 110rem;
+    background-size: 100%, 125rem;
 }
 
 .notavif.notwebp .sobre-tech {
@@ -246,7 +246,7 @@ img {
     color: var(--blanco);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-bottom: var(--separacion);
 }
 
@@ -262,7 +262,7 @@ img {
 
 .texto-sobre-tech p {
     font-size: 2rem;
-    line-height: 2;
+    line-height: 1.5;
 }
 
 
@@ -439,12 +439,12 @@ img {
 }
 
 .formulario input[type="text"] {
-    width: 100%;
+    width: 90%;
     padding: 1rem;
 }
 
 .formulario input[type="submit"] {
-    width: 100%;
+    width: 90%;
     padding: 2rem;
     background-color: var(--primario);
     color: var(--blanco);
